# hermes-ai-software-team-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/implementation/: agent-assignments.md  architecture.md  design.md  implementation-plan.md  requirements.md  research.md  validation-plan.md  validation-report.md
docs/prompts/: developer.md  junior-developer.md  reviewer.md  team-lead.md  tester.md
docs/reviews/: 2026-06-14-2010-repo-engineering-review.md
examples/prompt-regression-lab/: generated_graph.yaml
src/team_pipeline/: __init__.py  cli.py  doctor.py  graph.py  idea.py  kanban_client.py  planner.py  roles.py  runner.py  templates.py  validators.py  workflow.py
templates/: architecture.md.j2  handoff.md.j2  impl_task.md.j2  junior_qa_report.md.j2  pm_spec.md.j2  senior_dev_review.md.j2  senior_qa_audit.md.j2  ux_design.md.j2
tests/: conftest.py  test_cli.py  test_client_contract.py  test_doctor.py  test_graph.py  test_idea.py  test_kanban_client.py  test_planner.py  test_roles.py  test_runner.py  test_smoke.py  test_templates.py  test_validators.py  test_workflow.py
tests/fixtures/: assignees.json  create.json  list.json
