[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-pipeline"
version = "0.1.0"
description = "A Python CLI that generates a Hermes Kanban task graph from a product idea"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
]

[project.scripts]
team-pipeline = "team_pipeline.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/team_pipeline"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
